--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,8 @@
 
 # BEGIN WordPress
-
-<IfModule mod_headers.c>
-Header set X-XSS-Protection "1; mode=block"
-Header always append X-Frame-Options SAMEORIGIN
-Header set X-Content-Type-Options: "nosniff"
-</IfModule>
-
+# The directives (lines) between `BEGIN WordPress` and `END WordPress` are
+# dynamically generated, and should only be modified via WordPress filters.
+# Any changes to the directives between these markers will be overwritten.
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
